--- a/src/hpc-web/src/main/resources/templates/collectionsearchresultdetail.html
+++ b/src/hpc-web/src/main/resources/templates/collectionsearchresultdetail.html
@@ -99,7 +99,7 @@ app.controller('MainCtrl', ['$scope', '$http', '$interval', function ($scope, $h
         field : 'path',
         width : 300,
         displayName : 'Path',
-        cellTemplate : '<div class="ui-grid-cell-contents" title="TOOLTIP"><a href="../collection?action=view&amp;path={{COL_FIELD | dmePathEncoding}}">{{COL_FIELD}}</a></div>'
+        cellTemplate : '<div class="ui-grid-cell-contents" title="TOOLTIP"><a target="_blank" href="../collection?action=view&amp;path={{COL_FIELD | dmePathEncoding}}">{{COL_FIELD}}</a></div>'
       },
       {
         field : 'uniqueId',
