--- a/src/hpc-web/src/main/resources/templates/dataobjectsearchresult.html
+++ b/src/hpc-web/src/main/resources/templates/dataobjectsearchresult.html
@@ -107,7 +107,7 @@
               field : 'path',
               minWidth : 500,
               displayName : 'Path',
-              cellTemplate : '<div class="ui-grid-cell-contents" title="TOOLTIP"><a href="../datafile?action=view&amp;path={{COL_FIELD | dmePathEncoding}}">{{COL_FIELD}}</a></div>'
+              cellTemplate : '<div class="ui-grid-cell-contents" title="TOOLTIP"><a target="_blank" href="../datafile?action=view&amp;path={{COL_FIELD | dmePathEncoding}}">{{COL_FIELD}}</a></div>'
             },
             {
               field : 'download',
