--- a/src/hpc-web/src/main/resources/templates/dataobjectsearchresultdetail.html
+++ b/src/hpc-web/src/main/resources/templates/dataobjectsearchresultdetail.html
@@ -105,7 +105,7 @@
 						field : 'path',
 						width : 350,
 						displayName : 'Path',
-						cellTemplate : '<div class="ui-grid-cell-contents" title="TOOLTIP"><a href="../datafile?action=view&amp;path={{COL_FIELD | dmePathEncoding}}">{{COL_FIELD}}</a></div>'
+						cellTemplate : '<div class="ui-grid-cell-contents" title="TOOLTIP"><a target="_blank" href="../datafile?action=view&amp;path={{COL_FIELD | dmePathEncoding}}">{{COL_FIELD}}</a></div>'
 					}, {
 						field : 'uniqueId',
 						width : 200,
