--- a/src/hpc-web/src/main/resources/templates/updatemetadatabulk.html
+++ b/src/hpc-web/src/main/resources/templates/updatemetadatabulk.html
@@ -25,6 +25,7 @@
 <link href="css/style-responsive.css" rel="stylesheet" />
 <link href="css/xcharts.min.css" rel=" stylesheet" />
 <link href="css/jquery-ui-1.10.4.min.css" rel="stylesheet" />
+<link href="css/jquery-ui-1.13.2.min.css" rel="stylesheet" />
 <link href="css/select2-4.0.11.min.css" rel="stylesheet" />
 <link href="DataTables/Responsive-2.2.7/css/responsive.dataTables.min.css" rel="stylesheet" />
 <link href="DataTables/Responsive-2.2.7/css/responsive.bootstrap.min.css" rel="stylesheet" />
@@ -86,6 +87,7 @@
     var assignedNames = [[${names}]];
     var searchType = [[${hpcSearch.getSearchType()}]];
     var deselectedColumns = [[${hpcSearch.getDeselectedColumns()}]];
+	var metadataAttributesList =  [[${metadataAttributesList}]];
 /*]]>*/
 </script>
 </head>
@@ -242,6 +244,7 @@
 	<script src="js/bootstrap.min.js"></script>
 
 	<script src="js/jquery-ui-1.10.4.min.js"></script>
+	<script src="js/jquery-ui-1.13.2.min.js"></script>
 	<script src="js/jquery.scrollTo.min.js"></script>
 	<script src="js/jquery.nicescroll.js" type="text/javascript"></script>
 	<script src="assets/jquery-knob/js/jquery.knob.js"></script>
@@ -254,7 +257,9 @@
 	<script type="text/javascript">
 	//<![CDATA[
 		$(document).ready(function(){
-			$('#sub-menu-search').addClass("active");
+			$("#mdname").autocomplete({
+                source: metadataAttributesList
+            });
 		});
 
 		$(document).ready(function () {
