--- a/src/hpc-web/src/main/resources/templates/updatemetadatabulk.html
+++ b/src/hpc-web/src/main/resources/templates/updatemetadatabulk.html
@@ -25,7 +25,6 @@
 <link href="css/style-responsive.css" rel="stylesheet" />
 <link href="css/xcharts.min.css" rel=" stylesheet" />
 <link href="css/jquery-ui-1.10.4.min.css" rel="stylesheet" />
-<link href="css/jquery-ui-1.13.2.min.css" rel="stylesheet" />
 <link href="css/select2-4.0.11.min.css" rel="stylesheet" />
 <link href="DataTables/Responsive-2.2.7/css/responsive.dataTables.min.css" rel="stylesheet" />
 <link href="DataTables/Responsive-2.2.7/css/responsive.bootstrap.min.css" rel="stylesheet" />
@@ -54,6 +53,7 @@
 	type="text/css" />
 <script
 	src="js/jquery/3.1.1/jquery.min.js"></script>
+
 <script
 	src="js/bootstrap/3.3.7/bootstrap.min.js"></script>
 <script
@@ -87,7 +87,6 @@
     var assignedNames = [[${names}]];
     var searchType = [[${hpcSearch.getSearchType()}]];
     var deselectedColumns = [[${hpcSearch.getDeselectedColumns()}]];
-	var metadataAttributesList =  [[${metadataAttributesList}]];
 /*]]>*/
 </script>
 </head>
@@ -142,7 +141,18 @@
 															</tr>
 														</thead>
 														<tbody><tr>
-															<td><input class="form-control" type="text" id="mdname" name="metadataName" placeholder="Enter Metadata Attribute" th:value="${bulkMetadataUpdateRequest.getMetadataName()}" /></td>
+															<td>
+																<input
+																	type="text" class="form-control"
+																	list="metadataAttributesListId" autocomplete="on"
+																	id="mdname" name="metadataName" placeholder="Enter Metadata Attribute" th:value="${bulkMetadataUpdateRequest.getMetadataName()}" />
+																	<datalist id="metadataAttributesListId">
+																		<option
+																			th:each="metadataAttributeName : ${metadataAttributesList}"
+																			th:value="${metadataAttributeName}" th:text="${metadataAttributeName}">
+																		</option>
+																	</datalist>
+																</td>
 															<td><input class="form-control" type="text" id="mdval" name="metadataValue" placeholder="Enter Metadata Value" th:value="${bulkMetadataUpdateRequest.getMetadataValue()}" /></td>
 														</tr></tbody>
 													</table>
@@ -203,7 +213,7 @@
 						</thead>
 						<tbody>
 							<tr id='attrCol0' th:each="path : ${paths}">
-								<td id='path1'><a th:href="@{/collection(path=${path}, action=view)}"  th:text="${path}"></a></td>
+								<td id='path1'><a th:href="@{/collection(path=${path}, action=view)}"  th:text="${path}" target="_blank"></a></td>
 							</tr>
 						</tbody>
 					</table>
@@ -244,7 +254,6 @@
 	<script src="js/bootstrap.min.js"></script>
 
 	<script src="js/jquery-ui-1.10.4.min.js"></script>
-	<script src="js/jquery-ui-1.13.2.min.js"></script>
 	<script src="js/jquery.scrollTo.min.js"></script>
 	<script src="js/jquery.nicescroll.js" type="text/javascript"></script>
 	<script src="assets/jquery-knob/js/jquery.knob.js"></script>
@@ -256,11 +265,6 @@
 
 	<script type="text/javascript">
 	//<![CDATA[
-		$(document).ready(function(){
-			$("#mdname").autocomplete({
-                source: metadataAttributesList
-            });
-		});
 
 		$(document).ready(function () {
 			$('#pathgrid').DataTable( {
