--- a/src/hpc-web/src/main/resources/templates/subscribenotifications.html
+++ b/src/hpc-web/src/main/resources/templates/subscribenotifications.html
@@ -26,6 +26,7 @@
 <link href="css/style-responsive.css" rel="stylesheet" />
 <link href="css/xcharts.min.css" rel=" stylesheet" />
 <link href="css/jquery-ui-1.10.4.min.css" rel="stylesheet" />
+<link href="css/select2-4.0.11.min.css" rel="stylesheet" />
 <!-- HTML5 shim and Respond.js IE8 support of HTML5 -->
 <!--[if lt IE 9]>
       <script src="js/html5shiv.js"></script>
@@ -94,7 +95,28 @@
 										id="notificationRequest" th:object="${notificationRequest}"
 										method="post" enctype="multipart/form-data">
 										<div class="form-group">
-											<div class="col-sm-10 column">
+
+                            <div class="col-sm-10 column" style="margin-bottom: 8px"
+                            th:if="${session} != null and ${session.hpcUser.getUserRole()} == 'SYSTEM_ADMIN' or ${session.hpcUser.getUserRole()} == 'GROUP_ADMIN'">
+                              <table>
+                                <tr>
+                                  <td><label for="User">User:</label> </td>
+                                  <td style="white-space: nowrap; padding: 8px">
+                                    <select size="1" th:id="userId" th:field="*{userId}" th:name="userId" th:required="required" class="form-control simple-select2 sl">
+                                    <option th:each="user : ${users}"
+                                      th:value="${user.userId}"
+                                      th:text="${user.firstName} + ' ' + ${user.lastName}"
+                                      th:selected="${user.userId} == *{userId}">
+                                    </option>
+                                    </select></td>
+                                  <td style="text-align: right">
+                                    <a class="btn btn-md btn-primary" type="submit" onClick="refresh()">Refresh</a>
+                                  </td>
+                                </tr>
+                              </table>
+                           </div>
+							
+                           <div class="col-sm-10 column">
 												<table class="table table-bordered table-hover"
 													id="metaAttrTable">
 													<thead>
@@ -169,6 +191,7 @@
 											</div>
 
 										</div>
+									  <input type="hidden" id="actionType" name="actionType" value=""/>
 									</form>
 								</div>
 							</div>
@@ -195,9 +218,11 @@
 	<script src="assets/jquery-knob/js/jquery.knob.js"></script>
 	<script src="js/jquery.sparkline.js" type="text/javascript"></script>
 	<script src="js/jquery.customSelect.min.js"></script>
+	<script src="js/select2-4.0.11.min.js"></script>
 
 	<!--custome script for all page-->
 	<script src="js/scripts.js"></script>
+
 
 <script type="text/javascript">
 
@@ -218,6 +243,9 @@ function showalert(message,alerttype) {
     }, 5000);
   }
 
+
+
+
 var rowId = 1;
 //<![CDATA[
 
@@ -226,6 +254,7 @@ function enableSave()
 	$('#primaryButton').removeClass('disabled');
 	$('#primaryButton').prop('disabled', false);
 }
+
 
 function addRow() {
 	var path = document.getElementById("collectionPath").value;
@@ -258,8 +287,17 @@ function addRow() {
 
     document.getElementById("collectionPath").value = "";
     document.getElementById("update").checked = false;
-    
 }
+
+
+function refresh()
+{
+	document.getElementById("actionType").value = "refresh";
+	$("#notificationRequest").submit();
+}
+
+
+
 //]]>
 </script>
 
