HPCDATAMGM-1804: Added autocomplete to User drop down in Manage Notifications page

--- a/src/hpc-web/src/main/resources/templates/subscribenotifications.html
+++ b/src/hpc-web/src/main/resources/templates/subscribenotifications.html
@@ -229,6 +229,7 @@
 $(document).ready(function(){
 	$('#sub-menu-manage').addClass("active");
 	$('[data-toggle="tooltip"]').tooltip();
+	$('#userId').select2();
 });
 
 function showalert(message,alerttype) {
