--- a/src/hpc-web/src/main/resources/templates/browse.html
+++ b/src/hpc-web/src/main/resources/templates/browse.html
@@ -66,6 +66,7 @@
     var scrollLoc = [[${scrollLoc}]];
     var userBookmarks = [[${userBookmarks}]];
     var refresh = null;
+    var loadmore = null;
     var detail = true;
 /*]]>*/
 </script>
@@ -194,6 +195,9 @@ app
 	        }]);
 	        contextMenuData.push(['Refresh Node', function() { 
 	        	refreshNode(node);
+	        }]);
+	        contextMenuData.push(['Load More Entries', function() { 
+	        	loadMore(node);
 	        }]);
         }
 
@@ -450,6 +454,8 @@ cursor: pointer;
 											<li><a href="#addBulk">Add Bulk</a></li>
 											<li class="divider"></li>
 											<li><a href="#refreshNode">Refresh Node</a></li>
+											<li class="divider"></li>
+											<li><a href="#loadMore">Load More Entries</a></li>
 									</ul>	
 								</div>
 									<div id="right" class="">
@@ -491,6 +497,7 @@ cursor: pointer;
 		<input type="hidden" id="selectedNodeId" name="selectedNodeId"/>
 		<input type="hidden" id="scrollLoc" name="scrollLoc"/>
 		<input type="hidden" id="refreshNode" name="refreshNode"/>
+		<input type="hidden" id="loadMore" name="loadMore"/>
 	</form>
 	
 	<!-- container section start -->
@@ -548,9 +555,9 @@ $(function() {
 //                $li.find('.jqtree-element').append('<a id="refreshBrowse" class="btn btn-link btn-sm refresh" th:href="@{/browse?refresh}"><i class="fa fa-refresh" title="Refresh" aria-hidden="true" data-node-id="' + node.id + '"></i></a>');
             } else {
             	if(node.id == "empty")
-            		menuAPI.disable(node.name, ['viewDetails','addCollection','addDatafile','addBulk','refreshNode']);
+            		menuAPI.disable(node.name, ['viewDetails','addCollection','addDatafile','addBulk','refreshNode','loadMore']);
             	else
-            		menuAPI.disable(node.name, ['addCollection','addDatafile','addBulk','refreshNode']);
+            		menuAPI.disable(node.name, ['addCollection','addDatafile','addBulk','refreshNode','loadMore']);
             }
         }
     });
@@ -566,6 +573,13 @@ $('#tree1').on('click', '.refresh', function(e) {
     refreshNode(node);
 });
 
+$('#tree1').on('click', '.loadMore', function(e) {	
+	e.stopImmediatePropagation();
+	var node_id = $(e.target).data('node-id');
+    var node = $('#tree1').tree('getNodeById', node_id);
+    loadMore(node);
+});
+
 function refreshNode(node) {    
 
 	if(node.parent != null) {
@@ -574,6 +588,19 @@ function refreshNode(node) {
 		node = $('#tree1').tree('getNodeById', node.id);
 	}
 	refresh = node.id;
+	browseNode(node);
+	$('#tree1').tree('openNode', node);
+	$('#tree1').tree('selectNode', node);
+}
+
+function loadMore(node) {    
+
+	if(node.parent != null) {
+		console.log('parent: ' + node.parent.id);
+	} else {
+		node = $('#tree1').tree('getNodeById', node.id);
+	}
+	loadmore = node.id;
 	browseNode(node);
 	$('#tree1').tree('openNode', node);
 	$('#tree1').tree('selectNode', node);
@@ -648,7 +675,7 @@ function browseDataobject(node) {
 	  
       $.ajax({
           type : "POST",
-          data: {selectedNodePath: node.fullPath, refreshNode: refresh, scrollLoc: scrollLoc},
+          data: {selectedNodePath: node.fullPath, refreshNode: refresh, loadMore: loadmore, scrollLoc: scrollLoc},
           dataType: "json",
           url : "/browse/dataObject",
           success : function(msg) {
@@ -676,7 +703,7 @@ function browseNode(node) {
 	  
       $.ajax({
           type : "POST",
-          data: {selectedNodePath: node.fullPath, refreshNode: refresh, scrollLoc: scrollLoc},
+          data: {selectedNodePath: node.fullPath, refreshNode: refresh, scrollLoc: scrollLoc, loadMore: loadmore},
           dataType: "json",
           url : "/browse/collection",
           success : function(msg) {
@@ -751,6 +778,9 @@ var menuAPI = $('#tree1').jqTreeContextMenu($('#myMenu'), {
     },
     "refreshNode": function (node) {
     	refreshNode(node);
+    },
+    "loadMore": function (node) {
+    	loadMore(node);
     }
 }); 
 
