--- a/src/hpc-web/src/main/resources/templates/browse.html
+++ b/src/hpc-web/src/main/resources/templates/browse.html
@@ -581,7 +581,7 @@ $('#tree1').on('click', '.loadMore', function(e) {
 });
 
 function refreshNode(node) {    
-
+	loadmore = null;
 	if(node.parent != null) {
 		console.log('parent: ' + node.parent.id);
 	} else {
@@ -589,12 +589,10 @@ function refreshNode(node) {
 	}
 	refresh = node.id;
 	browseNode(node);
-	$('#tree1').tree('openNode', node);
-	$('#tree1').tree('selectNode', node);
 }
 
 function loadMore(node) {    
-
+	refresh = null;
 	if(node.parent != null) {
 		console.log('parent: ' + node.parent.id);
 	} else {
@@ -602,8 +600,6 @@ function loadMore(node) {
 	}
 	loadmore = node.id;
 	browseNode(node);
-	$('#tree1').tree('openNode', node);
-	$('#tree1').tree('selectNode', node);
 }
 
 //bind 'tree.click' event
@@ -711,6 +707,13 @@ function browseNode(node) {
           	data = msg;
           	$('#tree1').tree('updateNode', node, data[0]);
           	angular.element('#refreshGrid').triggerHandler('click');
+          	if(node.children != null) {
+	          for (var i=0; i < node.children.length; i++) {
+	 	        var child = node.children[i];
+	            $('#tree1').tree('closeNode', child, false);
+              }
+	        }
+	        $('#tree1').tree('selectNode', node);         	
           },
     	  error : function(e) {
     		 console.log('ERROR: ', e);
