HPCDATAMGM-1788: Change position of main-content section for read only page

--- a/src/hpc-web/src/main/resources/static/css/style.css
+++ b/src/hpc-web/src/main/resources/static/css/style.css
@@ -1939,6 +1939,14 @@ div[data-role="editor-toolbar"] {
     width: 100%;
 }
 
+#main-content-readonly {
+	position: absolute;
+    top: 90px;
+    bottom: 0px;
+    overflow: auto;
+    width: 100%;
+}
+
 .sidebar-closed > #sidebar > ul {
     display: none;
 }
