--- a/src/hpc-web/src/main/resources/templates/viewcollection.html
+++ b/src/hpc-web/src/main/resources/templates/viewcollection.html
@@ -72,7 +72,7 @@
 	<section id="container" class="">
 		<div th:include="headerreadonly :: header"></div>
 		<!--main content start-->
-		<section id="main-content">
+		<section id="main-content-readonly">
 			<section class="wrapper">
 				<!--Title start-->
 				<div class="row">
