HPCDATAMGM-1805: Ability to display more than 5000 entries in the Browse page

--- a/src/hpc-web/src/main/resources/templates/browse.html
+++ b/src/hpc-web/src/main/resources/templates/browse.html
@@ -705,6 +705,7 @@ function browseNode(node) {
           success : function(msg) {
        
           	data = msg;
+          	refresh = false;
           	$('#tree1').tree('updateNode', node, data[0]);
           	angular.element('#refreshGrid').triggerHandler('click');
           	if(node.children != null) {
