--- a/src/hpc-web/src/main/resources/templates/downloadtaskboard.html
+++ b/src/hpc-web/src/main/resources/templates/downloadtaskboard.html
@@ -133,10 +133,13 @@ app.controller('MainCtrl', ['$scope', '$http', '$interval', function ($scope, $h
       $scope.currentPage = currentPage;
       $scope.totalRows = totalRows;
       $scope.currentPageSize = currentPageSize;
+      $scope.pageSize = 100;
+	  $scope.tableHeight = getTableHeight($scope.totalPages, $scope.currentPage, $scope.pageSize,  $scope.totalRows); 
     }
   };
   $scope.gridOptions1.totalItems = totalRows;
   $scope.gridOptions1.data = results;
+
   if(queryAll == "false")
   	$scope.gridOptions1.columnDefs[0].visible = false;
 
@@ -166,6 +169,35 @@ app.controller('MainCtrl', ['$scope', '$http', '$interval', function ($scope, $h
 }]);
 
 </script>
+<script>
+	<!--
+		function getTableHeight(totalPage, currentPage, pageSize, rows) {
+		var rowHeight = 12; // row height
+			var headerHeight = 20; // header height
+			var footerHeight = 10; // bottom scroll bar height
+			var totalH = 0;
+			let itotalPage = parseInt(totalPage);
+			let icurrentPage = parseInt(currentPage);
+			if (itotalPage > 1) {
+			    if (icurrentPage < itotalPage) {
+			        totalH = pageSize * rowHeight + headerHeight + footerHeight;
+			    } else {
+			        var lastPageSize = rows % pageSize;
+			        if (lastPageSize === 0) {
+			            totalH = pageSize * rowHeight + headerHeight + footerHeight;
+			        } else {
+			            totalH = lastPageSize * rowHeight + headerHeight + footerHeight;
+			        }
+			    }
+			} else {
+				totalH = rows * rowHeight + headerHeight + footerHeight;
+			}
+			console.log(totalH);
+			let minHeight = 'min-height: ' + totalH + 'px';
+			return minHeight;
+		}
+	-->
+</script>
 
 </head>
 <body>
@@ -175,7 +207,7 @@ app.controller('MainCtrl', ['$scope', '$http', '$interval', function ($scope, $h
 		<div th:include="header :: header"></div>
 		<!--main content start-->
 		<section id="main-content">
-			<section class="wrapper">
+			<section class="wrapper-manage">
 				<!--Title start-->
 				<div class="row">
 					<div class="col-lg-12">
@@ -215,7 +247,7 @@ app.controller('MainCtrl', ['$scope', '$http', '$interval', function ($scope, $h
 							<div ng-controller="MainCtrl">
 									<div id="grid1" ui-grid="gridOptions1" ui-grid-cellNav="true"
 										ui-grid-pagination="true" ui-grid-grouping="true"
-										ui-grid-resize-columns="true" ui-grid-move-columns="true"></div>
+										ui-grid-resize-columns="true" ui-grid-move-columns="true"  style="{{tableHeight}}"></div>
 									<p>Current Page: {{ currentPage }} of {{ totalPages }}
 										&nbsp;&nbsp;|&nbsp;&nbsp;Page Size: {{ currentPageSize }}
 										&nbsp;&nbsp;|&nbsp;&nbsp;Total Records: {{ totalRows }}</p>
