HPCDATAMGM-1807: Remove space on the right and the bottom of the grid in the Registration Taks page

--- a/src/hpc-web/src/main/resources/static/css/style.css
+++ b/src/hpc-web/src/main/resources/static/css/style.css
@@ -610,15 +610,10 @@ ul.sidebar-menu li.active a i {
 
 .wrapper-manage {
     display: inline-block;
-    margin-bottom: 1px;
-    padding-top: 15px;
-    padding-right: 15px;
-    padding-bottom: 1px;
-    padding-left: 15px;
-    height: 725px;
+    padding: 15px;
     width: 100%;
+    height: 100%;
 }
-
 
 #appnavbar.navbar {
     border-radius: 0px;
