--- a/src/hpc-web/src/main/resources/templates/uploadtaskboard.html
+++ b/src/hpc-web/src/main/resources/templates/uploadtaskboard.html
@@ -117,14 +117,15 @@ app.controller('MainCtrl', ['$scope', '$http', '$interval', function ($scope, $h
     paginationPageSize: 100,
     rowHeight: 30,
     minRowsToShow: currentPageSize,
+    minimumColumnSize: 200,
     enablePaginationControls: false,
     columnDefs: [
-		 		 { field: 'userId', width:150, displayName: 'User ID', cellTemplate: '<div class="ui-grid-cell-contents" title="TOOLTIP">{{COL_FIELD CUSTOM_FILTERS}}</div>'  },
-                 { field: 'taskId', minWidth:300, displayName: 'Task ID', cellTemplate: '<div class="ui-grid-cell-contents" title="TOOLTIP"><a href="uploadtask?taskId={{row.entity.taskId}}&amp;type={{row.entity.type}}">{{COL_FIELD CUSTOM_FILTERS}}</a></div>'  },
-                 { field: 'sourceType', width:150, displayName : 'Source Type'},
-                 { field: 'result', width:200, displayName: 'Transfer Result'},
-                 { field: 'created', width:200, displayName : 'Created On' },
-                 { field: 'completed', width:200, displayName : 'Completed On'}
+		 		 { field: 'userId', width:'*', minWidth: 150, displayName: 'User ID', cellTemplate: '<div class="ui-grid-cell-contents" title="TOOLTIP">{{COL_FIELD CUSTOM_FILTERS}}</div>'  },
+                 { field: 'taskId', width:'33%', minWidth: 300, displayName: 'Task ID', cellTemplate: '<div class="ui-grid-cell-contents" title="TOOLTIP"><a href="uploadtask?taskId={{row.entity.taskId}}&amp;type={{row.entity.type}}">{{COL_FIELD CUSTOM_FILTERS}}</a></div>'  },
+                 { field: 'sourceType', width:'18%', minWidth: 150, displayName : 'Source Type'},
+                 { field: 'result', width:'10%', minWidth: 150, displayName: 'Transfer Result'},
+                 { field: 'created', width:'14%', minWidth: 150, displayName : 'Created On' },
+                 { field: 'completed',width:'14%', minWidth: 150, displayName : 'Completed On'}
                ],
     onRegisterApi: function( gridApi ) {
       $scope.grid1Api = gridApi;
@@ -170,7 +171,7 @@ app.controller('MainCtrl', ['$scope', '$http', '$interval', function ($scope, $h
 		<div th:include="header :: header"></div>
 		<!--main content start-->
 		<section id="main-content">
-			<section class="wrapper">
+			<section class="wrapper-manage">
 				<!--Title start-->
 				<div class="row">
 					<div class="col-lg-12">
@@ -182,7 +183,7 @@ app.controller('MainCtrl', ['$scope', '$http', '$interval', function ($scope, $h
 				<!--Title End-->
 				<!--Row start-->
 				<div class="row">
-					<div class="col-lg-9 col-md-12">
+					<div class="col-lg-12 col-md-12">
 						<div class="panel panel-default">
 							<div class="panel-heading">
 								<div class="col-md-3">
