--- a/src/hpc-web/src/main/resources/templates/uploadtaskboard.html
+++ b/src/hpc-web/src/main/resources/templates/uploadtaskboard.html
@@ -117,16 +117,15 @@ app.controller('MainCtrl', ['$scope', '$http', '$interval', function ($scope, $h
     paginationPageSize: 100,
     rowHeight: 30,
     minRowsToShow: currentPageSize,
-    minimumColumnSize: 200,
     enablePaginationControls: false,
     columnDefs: [
-		 		 { field: 'userId', width:'*', minWidth: 150, displayName: 'User ID', cellTemplate: '<div class="ui-grid-cell-contents" title="TOOLTIP">{{COL_FIELD CUSTOM_FILTERS}}</div>'  },
-                 { field: 'taskId', width:'33%', minWidth: 300, displayName: 'Task ID', cellTemplate: '<div class="ui-grid-cell-contents" title="TOOLTIP"><a href="uploadtask?taskId={{row.entity.taskId}}&amp;type={{row.entity.type}}">{{COL_FIELD CUSTOM_FILTERS}}</a></div>'  },
-                 { field: 'sourceType', width:'18%', minWidth: 150, displayName : 'Source Type'},
-                 { field: 'result', width:'10%', minWidth: 150, displayName: 'Transfer Result'},
-                 { field: 'created', width:'14%', minWidth: 150, displayName : 'Created On' },
-                 { field: 'completed',width:'14%', minWidth: 150, displayName : 'Completed On'}
-               ],
+		 		 { field: 'userId', width:150, displayName: 'User ID', cellTemplate: '<div class="ui-grid-cell-contents" title="TOOLTIP">{{COL_FIELD CUSTOM_FILTERS}}</div>'  },
+                 { field: 'taskId', minWidth:300, displayName: 'Task ID', cellTemplate: '<div class="ui-grid-cell-contents" title="TOOLTIP"><a href="uploadtask?taskId={{row.entity.taskId}}&amp;type={{row.entity.type}}">{{COL_FIELD CUSTOM_FILTERS}}</a></div>'  },
+                 { field: 'sourceType', width:200, displayName : 'Source Type'},
+                 { field: 'result', width:150, displayName: 'Transfer Result'},
+                 { field: 'created', width:175, displayName : 'Created On' },
+                 { field: 'completed', width:175, displayName : 'Completed On'}
+                ],
     onRegisterApi: function( gridApi ) {
       $scope.grid1Api = gridApi;
       $scope.totalPages = totalPages;
